# DraftGPT

./: .bumpversion.cfg  README.md  incident_description.txt  main.py  pyproject.toml  requirements.txt  test_draftgpt.py
.github/workflows/: build-project.yml  python-app.yml
flagged/: log.csv
incident_descriptions/: incident_description.txt  incident_description1.txt  incident_description2.txt  incident_description3.txt
src/DraftGPT/: test_draftgpt.py
