[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DraftGPT"
version = "0.0.1"
authors = [
  { name="insertname", email="insert@mail.com" },
  { name="insertname", email="insert@mail.com" },
  { name="Martin Evenbom", email="martin.evenbom@gmail.com" },
]
description = "GPT that drafts a Root Cause Analysis (RCA) document with input from unstructured sources (e.g. Slack chat, document templates, and emails)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Sanjivani-S/DraftGPT"
Issues = "https://github.com/Sanjivani-S/DraftGPT/issues"

[project.dependencies]
requests = "*"
